Add modal window in this site, but it's don't work Add style in module components "css" created a new js file and transferred there all third-party scripts related with that pulsating button with its styles

--- a/src/components/UI/MyModal/MyModal.module.css
+++ b/src/components/UI/MyModal/MyModal.module.css
@@ -5,12 +5,12 @@
     right: 0;
     left: 0;
     display: none;
-    background-color: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .myModalContent {
     padding: 25px;
-    background: #ffffff;
+    background: white;
     border-radius: 16px;
     min-width: 250px;
 }
