Added new pagination file Decomposition this code Added new features & actions to the App

--- a/public/style.css
+++ b/public/style.css
@@ -68,7 +68,7 @@
 
     body {
         font-family: system-ui;
-        /*background: hsl(200 50% 5%);*/
+        background: hsl(200 50% 5%);
         min-height: 100vh;
         display: grid;
         place-items: center;
